# Near_Deduplication

./: .gitattributes  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README copy.md  README.md  bloom_filter.py  bloom_filter_exercises.ipynb  discussion.html  discussion.md  lsh.py  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dev.yml  documentation.yml
data/: example_text.txt  five.tsv  randomnumbers.txt  thirty-lsh.txt
docs/: api.md  installation.md  usage.md
docs/source/: conf.py  index.rst  modules.rst  near_dedup.baselines.rst  near_dedup.bloom_filter.rst  near_dedup.deduplicator.rst  near_dedup.lsh.rst  near_dedup.rst
examples/: bloom_filter_exercises.ipynb  bloomfilterapplication.ipynb
near_dedup/: __init__.py  cli.py  lsh.py  lsh_improvements.py  union_find.py
near_dedup/baselines/: baselines.py
near_dedup/bloom_filter/: bloom_filter.py
near_dedup/data/: example_text.txt
near_dedup/deduplicator/: deduplicator.py
near_dedup/lsh/: lsh.py
near_dedup/utils/: preprocessing.py  visualize.py
results/: 100-baseline.txt  100-improved_lsh.txt  1000-baseline.txt  1000-improved_lsh.txt  1000-union_find_lsh.txt  10000-baseline.txt  10000-improved_lsh.txt  10000-union_find_lsh.txt  100000-baseline.txt  100000-improved_lsh.txt  300-baseline.txt  300-improved_lsh.txt  300-lsh.txt  300-union_find_lsh.txt  5-baseline.txt
results/data/: thirty-improved_lsh.txt  thirty-lsh-nb.txt
tests/: __init__.py  basic_test_example_files.txt  test_app.py
