[tool]
[tool.poetry]
name = "near_dedup"
version = "0.1.0"
homepage = "https://github.com/dheerajoruganty/near_dedup"
description = "Experiments for the Bloom filter and LSH in near duplicate detection."
authors = ["Dheeraj Oruganty, Pranav Patil, Will Corbin <db2winfb@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "near_dedup" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
nltk = "^3.9.1"
bitarray = "^3.0.0"
docutils = "^0.17"
matplotlib = "^3.5.1"
memory-profiler = "^0.61.0"
numpy = "^1.22.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
requests = "2.32.3"
virtualenv = "20.27.1"
sphinx = "^5.3.0"  # For documentation generation
sphinx-rtd-theme = "^1.0.0"  # Optional theme for Sphinx
mkdocs = "^1.2.3"
mkdocs-include-markdown-plugin = "^3.2.3"
mkdocs-material = "^8.1.11"
mkdocstrings = "^0.18.0"
mkdocs-material-extensions = "^1.0.3"
mkdocs-autorefs = "^0.3.1"
livereload = "^2.6.3"
pyreadline = "^2.1"
mike = "^1.1.2"
mmh3 = "^5.0.1"
ngram = "^4.0.3"

# Development and testing tools
black = "^22.3.0"
isort = "5.10.1"
flake8 = "4.0.1"
flake8-docstrings = "^1.6.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
pre-commit = "^2.17.0"
toml = "^0.10.2"
mypy = "^1.5.1"
setuptools = "^68.0"
pkginfo = "^1.9"
twine = "^3.8.0"

[tool.poetry.scripts]
near_dedup = "near_dedup.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.history
)/
'''

[tool.isort]
profile = "black"
